--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.android.teatime"
         minSdkVersion 16
@@ -20,9 +20,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:support-annotations:25.1.0'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:support-annotations:25.4.0'
+    compile 'com.google.firebase:firebase-appindexing:10.0.0'
 
-    // TODO (4) Add the required Espresso UI Testing dependencies
+    // COMPLETED (4) Add the required Espresso UI Testing dependencies
+    androidTestCompile 'com.android.support:support-annotations:25.4.0'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
